# battery-power-manager

./: .gitignore  AGENTS.md  BatteryPowerManager.nsi  LICENSE  README.md  build.ps1  pyproject.toml
.github/workflows/: ci.yml
installer/: Register-BackendTask.ps1  Start-BatteryBackend.ps1
installer/nut-config/: ups.conf  upsd.users
src/ecoflow_tray/: alerts.py  cli.py  config.py  single_instance.py  telemetry.py
src/ecoflow_tray/adapters/: fake.py  nut.py  protocol.py  serial_detect.py
src/ecoflow_tray/ui/: __init__.py  detail.py  status.py  tray.py
tests/: test_alerts.py  test_config.py  test_nut_adapter.py  test_serial_detect.py  test_telemetry.py  test_tray_launch.py  test_ui_detail.py  test_ui_status.py
