[project]
name = "ecoflow-tray"
version = "0.1.0"
description = "Portable Windows tray monitor for EcoFlow DELTA telemetry"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tray = ["pystray>=0.19", "pillow>=10.0"]
serial = ["pyserial>=3.5"]
build = ["pyinstaller>=6.0"]
test = ["pytest>=8.0"]

[project.scripts]
ecoflow-tray = "ecoflow_tray.cli:main"

[tool.setuptools.package-data]
ecoflow_tray = ["assets/*.png", "assets/*.svg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
